--- a/src/main/resources/templates/kty/find_food/food_test2.html
+++ b/src/main/resources/templates/kty/find_food/food_test2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script th:src="@{/js/kty_filter.js}"></script>
+<link rel="stylesheet" href="/css/toursearch_kty.css">
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=5084cc8a2f9c3459393c15e560d75404&libraries=services"></script>
 
 </head>
@@ -46,42 +47,39 @@
 			</select> <br> <br> <span id="food_type">음식 종류</span>
 			<div class="food_check_type">
 				<input type="checkbox" id="kw3Option1" name="foodType" value="한식"
-					style="margin-left: 10px;"
 					th:checked="${kw3 != null and kw3.contains('한식')}"> <label
 					for="kw3Option1">한식</label> <input type="checkbox" id="kw3Option2"
-					name="foodType" value="디저트" style="margin-left: 10px;"
+					name="foodType" value="디저트"
 					th:checked="${kw3 != null and kw3.contains('디저트')}"> <label
 					for="kw3Option2">디저트</label> <input type="checkbox" id="kw3Option3"
-					name="foodType" value="카페" style="margin-left: 10px;"
+					name="foodType" value="카페"
 					th:checked="${kw3 != null and kw3.contains('카페')}"> <label
 					for="kw3Option3">카페</label> <input type="checkbox" id="kw3Option4"
-					name="foodType" value="중식" style="margin-left: 10px;"
+					name="foodType" value="중식"
 					th:checked="${kw3 != null and kw3.contains('중식')}"> <label
 					for="kw3Option4">중식</label> <br> <input type="checkbox"
 					id="kw3Option5" name="foodType" value="일식"
-					style="margin-left: 10px;"
 					th:checked="${kw3 != null and kw3.contains('일식')}"> <label
 					for="kw3Option5">일식</label> <input type="checkbox" id="kw3Option6"
-					name="foodType" value="양식" style="margin-left: 10px;"
+					name="foodType" value="양식"
 					th:checked="${kw3 != null and kw3.contains('양식')}"> <label
 					for="kw3Option6">양식</label> <input type="checkbox" id="kw3Option7"
-					name="foodType" value="뷔페" style="margin-left: 23px;"
+					name="foodType" value="뷔페"
 					th:checked="${kw3 != null and kw3.contains('뷔페')}"> <label
 					for="kw3Option7">뷔페</label> <input type="checkbox" id="kw3Option8"
-					name="foodType" value="술집" style="margin-left: 10px;"
+					name="foodType" value="술집"
 					th:checked="${kw3 != null and kw3.contains('술집')}"> <label
 					for="kw3Option8">술집</label>
 			</div>
 			<div class="parking_check_type">
 				<span id="parking_type">주차 공간</span><br> <input type="checkbox"
 					id="kw4Option1" class="chk_par" name="ParkingType" value="있음"
-					style="margin-left: 10px;"
 					th:checked="${kw4 != null and kw4.contains('있음')}"> <label
-					for="kw4Option1" style="color: rgb(87, 87, 87);">있음</label> <input
+					for="kw4Option1">있음</label> <input
 					type="checkbox" id="kw4Option2" class="chk_par" name="ParkingType"
-					value="없음" style="margin-left: 10px;"
+					value="없음"
 					th:checked="${kw4 != null and kw4.contains('없음')}"> <label
-					for="kw4Option2" style="color: rgb(87, 87, 87);">없음</label>
+					for="kw4Option2">없음</label>
 			</div>
 			<button id="searchBtn">검색</button>
 			<form th:action="@{/tour/daegu_food2}" method="get" id="searchForm2">
@@ -112,18 +110,18 @@
 
 		</div>
 	</div>
-	<div class="right-area" style="overflow-y: auto;">
+	<div class="right-area">
 		<div th:each="food : ${foodList}" class="food-entry">
 			<p>
-				<span style="font-size: 15px; color: #f05650;" id="result_parking"
-					th:if="${food.shopParking == '없음'}">주차 불가능</span> <span
-					style="font-size: 15px; color: #f05650;" id="result_parking"
-					th:if="${food.shopParking == '없음(인근유료주차장이용)'}">주차 불가능</span> <span
-					style="font-size: 15px; color: #f05650;" id="result_parking"
-					th:if="${food.shopParking == '없음(저녁시간주차가능)'}">주차 불가능</span> <span
-					style="font-size: 15px; color: #f05650;" id="result_parking"
-					th:if="${food.shopParking == '있음'}">주차 가능</span><br> <span
-					th:text="${food.shopName}" style="font-size: 30px;"></span> <span
+				<span  class="result_parking"
+					th:if="${food.shopParking == '없음'}">주차 불가능</span> 
+					<span  class="result_parking"
+					th:if="${food.shopParking == '없음(인근유료주차장이용)'}">주차 불가능</span> 
+					<span class="result_parking"
+					th:if="${food.shopParking == '없음(저녁시간주차가능)'}">주차 불가능</span> 
+					<span class="result_parking"
+					th:if="${food.shopParking == '있음'}">주차 가능</span><br> 
+					<span th:text="${food.shopName}" id="result_parking2"></span> <span
 					style="margin-right: 1ch;"></span> <span
 					th:text="${food.shopCategory}"
 					style="font-size: 13px; color: grey;"></span>  <a th:href="@{'https://map.kakao.com/?q=' + ${food.shopAddr}}" style="margin-left:10px;" class="marker-link" target="_blank"></a>
