--- a/src/main/resources/static/css/toursearch_kty.css
+++ b/src/main/resources/static/css/toursearch_kty.css
@@ -21,3 +21,19 @@
 #result_parking2{
 	font-size: 30px;
 }
+
+#result_parking3{
+	margin-right: 1ch;
+}
+#result_parking4{
+	font-size: 13px; 
+	color: grey;
+}
+#result_parking5{
+	margin-right: 2ch;
+}
+
+
+#sdd{
+margin-left:10px;
+}
