--- a/src/main/resources/templates/kty/find_food/food_test2.html
+++ b/src/main/resources/templates/kty/find_food/food_test2.html
@@ -122,12 +122,12 @@
 					<span class="result_parking"
 					th:if="${food.shopParking == '있음'}">주차 가능</span><br> 
 					<span th:text="${food.shopName}" id="result_parking2"></span> <span
-					style="margin-right: 1ch;"></span> <span
-					th:text="${food.shopCategory}"
-					style="font-size: 13px; color: grey;"></span>  <a th:href="@{'https://map.kakao.com/?q=' + ${food.shopAddr}}" style="margin-left:10px;" class="marker-link" target="_blank"></a>
-					<span style="margin-right: 2ch;"></span><br> <span
-					th:text="${food.shopAddr}" class="shop-address"></span><span style="margin-left:10px;" id="sdd"></span><br> <span
-					class="shop-opening-text" th:text="${food.shopOpening}"></span> <span
+					id="result_parking3"></span> <span
+					th:text="${food.shopCategory}" id="result_parking4"></span>  <a th:href="@{'https://map.kakao.com/?q=' + ${food.shopAddr}}" style="margin-left:10px;" class="marker-link" target="_blank"></a>
+					<span id="result_parking5"></span><br> 
+					<span th:text="${food.shopAddr}" class="shop-address"></span>
+					<span id="sdd"></span><br> 
+					<span class="shop-opening-text" th:text="${food.shopOpening}"></span> <span
 					class="result_opening"></span><br> <br> <span
 					th:text="${#strings.replace(#strings.replace(#strings.replace(food.shopInfo, '&lt;br /&gt;', ' '), '&amp;', ' '), 'amp;', ' ')}"></span><br>
 				<br> <span id="food_menu_title">- 메뉴 - </span><br> <span
@@ -138,11 +138,6 @@
 		</div>
 
 		<div th:if="${foodList.size() == 0}">
-			<p id="no_search_data">
-				<img src="/img/no_search.PNG">
-			</p>
-		</div>
-		<div th:if="${paging.content.size() == 0}">
 			<p id="no_search_data">
 				<img src="/img/no_search.PNG">
 			</p>
