--- a/src/main/resources/static/css/kty.css
+++ b/src/main/resources/static/css/kty.css
@@ -1009,7 +1009,7 @@ li.mypage_sidebar a.active {
 
 .marker-link {
 	display: inline-block;
-	width: 25px; /* 마커 이미지의 가로 크기 */
+	width: 25px; /* 마커 이미지의 가로ss 크기 */
 	height: 32px; /* 마커 이미지의 세로 크기 */
 	background-image: url('/img/marker.png');
 	background-repeat: no-repeat;
@@ -1080,6 +1080,7 @@ li.mypage_sidebar a.active {
 .pagination {
 	position: relative !important;
     bottom: 10px;
+    text-align: center;
 }
 
 .room-entry>div {
