--- a/src/main/resources/templates/kdg/reserve.html
+++ b/src/main/resources/templates/kdg/reserve.html
@@ -524,9 +524,8 @@ input[type="checkbox"].inp_chk_02 {
 		<div class="reserve">
 			<div class="right">
 				<section class="info">
-
-					<span hidden id="roomID" th:value="${bookingvo.roomID}"
-						th:text="${bookingvo.roomID}"></span>
+					<span hidden id="roomID" th:value="${bookingvo.tempRoomId}"
+						th:text="${bookingvo.tempRoomId}"></span>
 					<p class="name">
 						<strong>숙소이름</strong> <span th:text="${bookingvo.accomTitle}">양평
 							스마일카라반펜션</span>
