--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -160,6 +160,9 @@ display:none;
 #intro_acc{
 color:grey;
 }
+.gray-button {
+  filter: grayscale(100%);
+}
 </style>
 </head>
 
@@ -229,11 +232,21 @@ color:grey;
     th:class="${book.bookStatus == '이용중' ? 'cancelBtn3' : (book.bookStatus == 'CANCEL_PAYMENT' or book.bookStatus == '이용완료' ? 'gray-button' : 'cancelBtn')}"
     th:text="${book.bookStatus == '이용중' ? '이용중' : book.bookStatus == '이용완료' ? '이용완료' : '예약취소'}">예약취소</button>
 					
-			 <button id="cancelBtn2" class="reviewBtn"
-                    th:if="${book.bookStatus == '이용완료'}" 
-                    th:text="'리뷰작성'"
-                    th:attr="data-accomid=${book.tempAccomId},data-roomid=${book.tempRoomId},data-in=${book.checkin}"
-                    onclick="disableButton(this)">리뷰작성</button>
+					<div class="ssss21131231" th:each="acc : ${book.accommodation}">
+					<div th:text="${#authentication.name}"></div>
+			 			<div th:text="${acc.acc_name}">
+			 			</div>
+			 			<div th:each="review : ${acc.reviews}">
+			 					<div th:text="${review.author}"></div>
+			 				</div>
+			 		</div>
+			 		
+			 
+			<button id="cancelBtn2" class="reviewBtn"
+    th:if="${book.bookStatus == '이용완료'}"
+    th:text="'리뷰작성'"
+    th:attr="data-accomid=${book.tempAccomId},data-roomid=${book.tempRoomId},data-in=${book.checkin}"
+    onclick="disableButton(this)">리뷰작성</button>
 				</p>
 				
 			
@@ -319,7 +332,7 @@ cancelBtns.forEach(cancelBtn => {
             $(button).addClass('gray-button'); // Add the 'gray-button' class to change appearance
             var roomID = $(button).attr('data-roomid');
             var checkIn = $(button).attr('data-in')
-            localStorage.setItem('disabled_review_button_'+checkIn+'-'+roomID, 'true'); // Store the disabled state in local storage
+           // localStorage.setItem('disabled_review_button_'+checkIn+'-'+roomID, 'true'); // Store the disabled state in local storage
 
             // Update the button text to "작성 완료"
             $(button).text('작성 완료');
@@ -452,7 +465,7 @@ cancelBtns.forEach(cancelBtn => {
       </body>
       </html>
     `);
-    disableButton(this);
+    //disableButton(this);
   });
 });
     
@@ -462,7 +475,6 @@ cancelBtns.forEach(cancelBtn => {
     
     
 	</script>
-
 	</body>
 
 </html>
