--- a/src/main/resources/static/css/main_jjj.css
+++ b/src/main/resources/static/css/main_jjj.css
@@ -9,7 +9,8 @@
 @font-face {
 	font-family: 'TheJamsil5Bold';
 	src:
-		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2')
+		format('woff2');
 	font-weight: 700;
 	font-style: normal;
 }
@@ -26,11 +27,7 @@
 	font-style: normal;
 }
 
-.jj_main {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+
 
 .jj_navbar a {
 	text-decoration: none;
@@ -39,24 +36,41 @@
 
 #header {
 	/* 네비 상단 고정  */
-	position: sticky;
-	top: 0;
-	z-index: 10;
-	display: flex;
+	position: fixed !important;
+	width: -webkit-fill-available;
+	top: 0 !important;
+	z-index: 10 !important;
+	display: flex !important;
 	/* 한 줄로 나란히 하기 */
-	justify-content: space-between;
+	justify-content: space-between !important;
 	/* 같은 중심축으로 해서 중간에 스페이스 넣기*/
-	align-items: center;
+	align-items: center !important;
 	/* 수직적으로 중간으로 배치 */
 	/*     background-color: var(--background-color); */
-	padding: 0px 12px;
+	padding: 0px 12px !important;
 	font-family: "TheJamsil5Bold", Arial, sans-serif;
 	font-weight: 700;
-	font-style: normal;
+	font-style: normal !important;
 	box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 }
 
+.weather-temp {
+	color: var(--main-color);
+}
+
+#header.activee .weather-temp {
+	color: var(--background-color);
+}
+
 @media screen and (min-width: 1000px) {
+	
+	.jj_main {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	margin-top: 100px;
+}
+	
 	#header.activee {
 		background-color: var(--main-color);
 		transition-duration: 0.2s;
@@ -66,7 +80,6 @@
 		-webkit-transition-timing-function: ease;
 		height: 80px;
 	}
-
 	.jj_navbar {
 		background-color: var(--background-color);
 		transition-duration: 0.2s;
@@ -76,24 +89,17 @@
 		-webkit-transition-timing-function: ease;
 		height: 80px;
 	}
-
-	.weather-temp {
-		color: var(--main-color);
-	}
-
-	#header.activee .weather-temp {
-		color: var(--background-color);
-	}
-
 	nav .jj_menubar ul li a .active:hover {
 		color: pink;
 	}
+
+
 }
 
 .jj_navbar_logo {
 	font-size: 22px;
 	/* 	color: var(--main-color); */
-	padding-left: 380px;
+	padding-left: 200px;
 }
 
 .jj_navbar_logo i {
@@ -114,7 +120,7 @@ body:not(.jj_navbar) {
 }
 
 nav .jj_menubar {
-	padding-right: 360px;
+	padding-right: 200px;
 }
 
 nav .jj_menubar ul {
@@ -275,8 +281,8 @@ nav .jj_menubar .jj_search .search_input {
 }
 
 .jj_slide_container {
-	width: 1100px;
-	height: 500px;
+	width: 1200px;
+	height: 600px;
 	display: flex;
 	margin: auto;
 	transition: transform 300ms ease-in;
@@ -819,7 +825,6 @@ footer address .order {
 
 /* ============== 반응형================== */
 @media screen and (max-width: 1000px) {
-
 	/* h2 원래있었음 */
 	.main {
 		width: 100%;
@@ -835,11 +840,10 @@ footer address .order {
 		padding-left: 20px;
 		font-family: "The-Jamsil-OTF-2-Light", Arial, sans-serif;
 	}
-
 	/* ========네비 */
 	#header {
-		position: sticky;
-		top: 0;
+		position: sticky !important;
+		top: 0 !important;
 		flex-direction: column;
 		/* align-items: center; */
 		align-items: center;
@@ -847,12 +851,12 @@ footer address .order {
 		/* 수평 왼쪽으로*/
 		padding-top: 20px;
 		padding-bottom: 20px;
+		height: 40px;
 	}
-
 	.activee {
-		position: sticky;
-		top: 0;
-		flex-direction: column;
+		position: sticky !important;
+		top: 0 !important;
+		flex-direction: column !important;
 		/* align-items: center; */
 		align-items: center;
 		padding: 8px 24px;
@@ -878,17 +882,16 @@ footer address .order {
 		text-align: center;
 		margin: 0 auto;
 		display: block;
+		/* 		margin-top: 10px; */
 	}
 
 	/* 검색창 */
 	.jj_search.active .jj_search_input {
 		width: 150px;
 	}
-
 	.jj_search.active .jj_search_btn {
 		transform: translateX(150px);
 	}
-
 	.jj_navbar {
 		background-color: var(--background-color);
 		transition-duration: 0.2s;
@@ -896,6 +899,7 @@ footer address .order {
 		color: var(--main-color);
 		-webkit-transition-duration: 0.2s;
 		-webkit-transition-timing-function: ease;
+		margin-top: 20px;
 	}
 
 	/* 창이 1000보다 작아지면 메뉴와 아이템을 밑으로 내림 */
@@ -916,7 +920,7 @@ footer address .order {
 		flex-direction: column;
 		align-items: center;
 		/* 메뉴만 센터로*/
-		width: 100%;
+		width: 100vw;
 		/* 센터로 안감, 메뉴 너비를 최대한으로 바꿔줘야함 */
 		height: 100vh;
 		top: 10px;
@@ -925,7 +929,6 @@ footer address .order {
 		transition: 0.3s;
 		text-align: center;
 	}
-
 	nav .jj_menubar {
 		padding-right: 0px;
 	}
@@ -937,26 +940,22 @@ footer address .order {
 		transition: 0.3s;
 		background-color: #fff;
 	}
-
 	.jj_navbar_menu li {
 		width: 400px;
 		height: 30px;
 		text-align: center;
 		top: 10%;
 	}
-
 	.jj_navbar_menu li:hover {
 		width: 100%;
 		border-radius: 4px;
 	}
-
 	.jj_navbar_menu li:last-child {
 		background-color: transparent;
 		width: 100%;
 		box-shadow: none;
 		border-radius: 0;
 	}
-
 	.jj_navbar_menu li a {
 		display: block;
 		margin: auto;
@@ -964,7 +963,6 @@ footer address .order {
 		padding: 5px;
 		text-align: center;
 	}
-
 	.jj_navbar_toogleBtn {
 		/* 화면이 작아졌을 때만 햄버거 버튼 나오게함 */
 		display: block;
@@ -995,7 +993,6 @@ footer address .order {
 		height: 250px;
 		padding-top: 0px;
 	}
-
 	.jj_slide_container {
 		width: 100%;
 		height: 100%;
@@ -1004,12 +1001,10 @@ footer address .order {
 		transition: transform 300ms ease-in;
 		overflow: hidden;
 	}
-
 	.jj_slide-box {
 		overflow: hidden;
 		transition: all 1s ease-in-out;
 	}
-
 	.jj_slide-box img {
 		width: 100%;
 		height: 100%;
@@ -1017,7 +1012,6 @@ footer address .order {
 		object-fit: cover;
 		text-align: center;
 	}
-
 	.jj_btns {
 		text-align: center;
 		padding: 10px;
@@ -1032,7 +1026,6 @@ footer address .order {
 		padding-top: 20px;
 		text-align: center;
 	}
-
 	.jj_icon a {
 		display: inline-block;
 		justify-content: space-around;
@@ -1052,29 +1045,24 @@ footer address .order {
 		font-size: 12px;
 		padding-left: 20px;
 	}
-
 	.jj_course {
 		padding-top: 30px;
 	}
-
-	.jj_course_container ul li:first-child,
-	.jj_course_container ul li:last-child {
+	.jj_course_container ul li:first-child, .jj_course_container ul li:last-child
+		{
 		width: 100%;
 		float: none;
 	}
-
 	.jj_course_container ul li {
 		width: 100%;
 		height: auto;
 		margin-bottom: 20px;
 		margin-left: 0px;
 	}
-
 	.jj_course_container ul li a {
 		width: 100%;
 		position: static;
 	}
-
 	.jj_course_m {
 		width: 100%;
 		height: auto;
@@ -1082,54 +1070,45 @@ footer address .order {
 	}
 
 	/* 파트너 관련 */
-	.jj_partner_container ul li:first-child,
-	.jj_partner_container ul li:last-child {
+	.jj_partner_container ul li:first-child, .jj_partner_container ul li:last-child
+		{
 		width: 100%;
 		float: none;
 	}
-
 	.jj_partner_container ul li {
 		height: auto;
 	}
-
 	.jj_partner_container ul li a {
 		width: 100%;
 		height: auto;
 		position: static;
 	}
-
 	.jj_partner_m {
 		width: 100%;
 		height: auto;
 		padding: 0px;
 	}
-
 	footer .jj_align {
 		width: 100%;
 		padding: 0 15px;
 	}
-
 	footer .jj_link {
 		display: block;
 	}
-
 	footer .jj_link li {
 		float: none;
 		display: block;
 		margin-bottom: 5px;
 		line-height: normal;
 	}
-
 	footer .jj_link li span {
 		display: inline-block;
 		position: relative;
 		top: 0;
 	}
-
 	footer p {
 		padding: 20px 0;
 	}
-
 	.jj_carousel img {
 		width: calc(100%/ 2);
 	}
