--- a/src/main/resources/templates/syw/adminNotice_list.html
+++ b/src/main/resources/templates/syw/adminNotice_list.html
@@ -300,7 +300,7 @@
 				<a class="delete-button" th:href="@{/admin/delete/{id}(id=${notice.id})}">삭제</a>
 			</div>
 
-			<div class="pagination">
+			<div class="pagination" th:if="${page.totalElements > 0}">
 				<ul>
 					<li class="page-item" th:if="${page.number > 0}">
 						<a class="page-link" href="#"
