--- a/src/main/resources/templates/pyr/my_productlist.html
+++ b/src/main/resources/templates/pyr/my_productlist.html
@@ -32,6 +32,8 @@
 					th:href="@{/user/mypage/my_productList}" class="active"
 					sec:authorize="hasRole('ROLE_PARTNER')"> 내 상품
 						목록</a></li>
+			<li class="mypage_sidebar"><a
+				th:href="@{/user/mypage/my_acc_bookList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 숙소 예약리스트</a></li>
 			</ul>
 		</nav>
 
