--- a/src/main/resources/templates/kty/find/daegu_room.html
+++ b/src/main/resources/templates/kty/find/daegu_room.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="/css/kty3.css">
 </head>
 <body id="userinfo_modify" onload="showPosition()">
+	
 <html layout:decorate="~{jjj/header}">
-<div id="test" layout:fragment="content" class="container my-3">
-<div id="kty_left-side_test">
+<div id="test" layout:fragment="content" class="container my-3"><div id="kty_left-side_test">
 		<div class="search_deagu_home">
 			<div class="search_kw">
 				<input type="text" id="search_kw" class="form-control2"
@@ -76,8 +76,8 @@
 						for="kw5Option2">호텔</label> <span class="spacing"></span> <input
 						type="checkbox" id="kw5Option3" name="RoomType" value="리조트"
 						th:checked="${kw5 != null and kw5.contains('리조트')}"> <label
-						for="kw5Option3">리조트</label> <span class="spacing"></span><br>
-					<input type="checkbox" id="kw5Option4" name="RoomType" value="펜션"
+						for="kw5Option3">리조트</label> <span class="spacing"></span> <input
+						type="checkbox" id="kw5Option4" name="RoomType" value="펜션"
 						th:checked="${kw5 != null and kw5.contains('펜션')}"> <label
 						for="kw5Option4">펜션</label> <span class="spacing"></span> <input
 						type="checkbox" id="kw5Option5" name="RoomType" value="게스트하우스"
@@ -144,39 +144,60 @@
 	<div id="kty_right-side_test">
 		<div th:each="accommodations : ${paging}" class="room-entry">
 			<div class="room_info_k">
-				<a th:href="@{|/tour/product/detail/${accommodations.id}|}"> <span
-					th:text="${accommodations.acc_name}"></span>&nbsp&nbsp&nbsp <span
-					th:text="${accommodations.acc_sectors}"
-					style="font-size: 15px; color: grey;"></span><br> <span
-					th:switch="${accommodations.acc_rating}" style="color: orange;">
-						<span th:case="1">★ ✩ ✩ ✩ ✩</span> <span th:case="2">★ ★ ✩
-							✩ ✩</span> <span th:case="3">★ ★ ★ ✩ ✩</span> <span th:case="4">★
-							★ ★ ★ ✩</span> <span th:case="5">★ ★ ★ ★ ★</span> <span th:case="0">✩
-							✩ ✩ ✩ ✩</span>
-				</span>&nbsp </span> <span
-					th:text="${accommodations.acc_rating != 0 ? accommodations.acc_rating:''}"
-					style="font-size: 13px;"></span> <span
-					style="font-size: 12px; font-weight: bold;"
-					th:if="${#lists.size(accommodations.reviews) > 0}"
-					th:text="'(' + ${#lists.size(accommodations.reviews)} + ')'"></span>
+				<a th:href="@{|/tour/product/detail/${accommodations.id}|}">
+					<div class="hotel_name_hk">
+						<span th:text="${accommodations.acc_name}"></span>&nbsp&nbsp&nbsp
+					</div>
+					<div class="hotel_sectors_hk">
+						<span th:text="${accommodations.acc_sectors}"
+							style="font-size: 15px; color: grey;"> </span>
+					</div>
 
-					<br> <br> <span th:text="${accommodations.acc_address}"
-					style="font-size: 15px;"></span><br> <br> <span
-					style="font-size: 15px;">투숙 인원 (최대) : </span>&nbsp<span
-					th:text="${accommodations.acc_max_people}" style="font-size: 15px;"></span><span
-					style="font-size: 15px;"> 명 </span><span
-					style="color: red; font-size: 12px; font-weight: bold;"></span><br>
-					<br> <span class="feefee"> <span
-						style="font-size: 20px; font-weight: bold;">평균금액 : </span>&nbsp&nbsp
-						<span class="productAmount"
-						th:text="${accommodations.acc_averPrice}"
-						style="font-size: 20px; font-weight: bold;"></span> &nbsp <span
-						style="font-size: 20px; font-weight: bold;"> 원</span>&nbsp&nbsp
-				</span>
+					<div class="hotel_rating_hk">
+						<span th:switch="${accommodations.acc_rating}"
+							style="color: orange;"> <span th:case="1">★ ✩ ✩ ✩ ✩</span>
+							<span th:case="2">★ ★ ✩ ✩ ✩</span> <span th:case="3">★ ★ ★
+								✩ ✩</span> <span th:case="4">★ ★ ★ ★ ✩</span> <span th:case="5">★
+								★ ★ ★ ★</span> <span th:case="0">✩ ✩ ✩ ✩ ✩</span>
+						</span>&nbsp </span>
+					
+						<span
+							th:text="${accommodations.acc_rating != 0 ? accommodations.acc_rating:''}"
+							style="font-size: 13px;"></span>
+					</div>
+					<div class="hotel_reviews_hk">
+							 <span
+							style="font-size: 12px; font-weight: bold;"
+							th:if="${#lists.size(accommodations.reviews) > 0}"
+							th:text="'(' + ${#lists.size(accommodations.reviews)} + ')'"></span>
+					</div>							
+					<div class="hotel_address_hk">
+						<span th:text="${accommodations.acc_address}"
+							style="font-size: 15px;"></span>
+					</div>
+					<div class="hotel_max_people_hk">
+							<span style="font-size: 15px;">투숙
+							인원 (최대) : </span>&nbsp <span th:text="${accommodations.acc_max_people}"
+							style="font-size: 15px;"></span><span style="font-size: 15px;">
+							명 </span><span style="color: red; font-size: 12px; font-weight: bold;"></span>
+					</div>
+
+					<div class="hotel_averPrice_hk">
+						<span class="feefee"> <span
+							style="font-size: 20px; font-weight: bold;">평균금액 : </span>&nbsp&nbsp
+							<span class="productAmount"
+							th:text="${accommodations.acc_averPrice}"
+							style="font-size: 20px; font-weight: bold;"></span> &nbsp <span
+							style="font-size: 20px; font-weight: bold;"> 원</span>&nbsp&nbsp
+						</span>
+					</div>
+
+
+
 				</a>
+				<div class="room-photo"
+					th:style="'background-image: url(' + ${accommodations.acc_img} + ');'"></div>
 			</div>
-			<div class="room-photo"
-				th:style="'background-image: url(' + ${accommodations.acc_img} + ');'"></div>
 
 
 
@@ -516,4 +537,5 @@
 	</div>
 </body>
 
-<script th:src="@{/js/kty_filter2.js}"></script></html>
+<script th:src="@{/js/kty_filter2.js}"></script>
+</html>
