--- a/src/main/resources/templates/kty/signup_form.html
+++ b/src/main/resources/templates/kty/signup_form.html
@@ -16,7 +16,7 @@
 <div class="container_my-3">
 	<div class="my-3 border-bottom">
 		<div>
-			<h4 class="join_title">경상도숙박장사</h4>
+			<h4 class="join_title">DAE BAK</h4>
 		</div>
 	</div>
 	<form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
