--- a/src/main/resources/static/css/product_detail_kdg.css
+++ b/src/main/resources/static/css/product_detail_kdg.css
@@ -13,7 +13,7 @@
 } */
 
 .datepicker table {
-    background-color: #fff;
+      background-color: #fff;
     margin: 0;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -22,6 +22,8 @@
     -ms-user-select: none;
     user-select: none;
     position: absolute;
+	z-index:10;
+	border: solid 1px gray;
 }
 
 
