--- a/src/main/resources/templates/kty/login_form.html
+++ b/src/main/resources/templates/kty/login_form.html
@@ -19,7 +19,7 @@
 <div class="container_my-3">
 	<div class="my-3 border-bottom">
 		<div>
-			<h4 class="login_title">경상도숙박장사</h4>
+			<h4 class="login_title">DAE BAK</h4>
 		</div>
 	</div>
 	<form th:action="@{/user/login}" method="post">
