--- a/src/main/resources/templates/kdg/success.html
+++ b/src/main/resources/templates/kdg/success.html
@@ -99,9 +99,9 @@
 </table>
 	<br>
 	 <button id="reservebtn" onclick="location.href='/user/mypage/my_booking'">예약내역으로 이동</button>
-     <button id="kaobtn2">결제취소</button>
+     <!-- <button id="kaobtn2">결제취소</button> -->
     
-    <script>
+    <!-- <script>
 		$(function() {
 		$("#kaobtn2").click(function (){ 
 			const amount = document.getElementById('amount').textContent;
@@ -121,7 +121,7 @@
 			});
 		});
 	});
-	</script> 
+	</script>  -->
     
 </body>
 </html>
