--- a/src/main/resources/templates/kty/admintest.html
+++ b/src/main/resources/templates/kty/admintest.html
@@ -30,11 +30,13 @@
 	   <div id="today_booking_kty"> 금일 예약 건 수 - <span id="todayBookingCount"></span><span> 건</span></div>
 	   <div id="today_total_kty"> 예약 금액 총 액 - <span id="todayTotalmoney"></span><span> 원</span></div>
 	     
-	     
-	     <div>{ 정산 통계 }</div>
-	     <div id="today_booking_kty44"> 정산 예정 건 수 - <span id="todayTotalcal"></span><span> 건</span></div>
-	     <div id="today_booking_kty33"> 정산 예정 총 액 - <span id="todayTotalcal2"></span><span> 원</span></div>
-	     <div id="start_cal">*<span id="no_start_cal"> 정산 대상은 숙소 이용완료 + 현재날짜 에서 15일 전 결제 건</span></div>
+	  	     
+	     <div>{ 취소 통계 }</div>
+	     <div id="today_booking_kty44"> 금일 취소 건 수 - <span id="todayTotaCancle"></span><span> 건</span></div>
+	     <!-- <div id="today_booking_kty33"> 정산 예정 총 액 - <span id="todayTotalcal2"></span><span> 원</span></div> -->
+<!-- 	     <div id="start_cal">*<span id="no_start_cal"> 정산 대상은 이용완료 된 숙소에서  현재날짜 기준 15일 전 결제 건</span></div> -->
+ 
+ 
     </div>
       
 
